# rsn

algorithm/: ._echo_data_filter.cpp  line_detect.cpp  lost_cow_move.cpp
arma/: CMakeLists.txt  mainpage.dox  manifest.xml
arma/src/: ARma_demo.cpp  ARma_demo.cpp~  pattern.cpp  patterndetector.cpp  patterndetector.cpp~  patterndetector.h
boat_field_test/: CMakeLists.txt  config  mainpage.dox  manifest.xml
boat_field_test/src/: boat_field_final.cpp  boat_field_test.cpp  boat_util.cpp
boat_sim/: .~lock.stage-000000.png#  .~lock.stage-000001.png#  2014-09-29-16-37-45.bag  CMakeLists.txt  manifest.xml  run_line  run_mod  run_stage
boat_sim/src/: boat_obstacle_avoidBU.cpp  boat_obstacle_avoid_line.cpp  boat_obstacle_avoid_mod.cpp  boat_utilBU.cpp
boat_sim/worlds/: .~lock.empty.png#  corridor.world  floorplan.odg  map.inc  objects.inc  obstacle.world  obstacle_line.world  obstacle_mod.world  obstacle_mod.world~  pioneer.inc  rectangle.odg  rectangle1.png.odg  sick.inc
drone/: CMakeLists.txt  Match_Graph  desk_img  manifest.xml  point_test  stereo_sgbm  stereo_sgbm~  test_img
drone/.svn/: all-wcprops  entries
drone/src/: Match_Graph.cpp  extrinsics.yml  goodfeature.cpp  stereo_sgbm.cpp
echo/: CMakeLists.txt  config  mainpage.dox  manifest.xml
echo/data/: test  test.txt  test1.txt  test2.txt  test3.txt  test4.txt
echo/include/: SerialPort.h  SerialPort.h~  echo_publish.h  echo_publish.h~
echo/src/: SerialPort.cpp  (+5 more)
flycam/: CMakeLists.txt  mainpage.dox  manifest.xml
flycam/src/: StereoCapture.cpp  StereoCapture.cpp~  im_rectify.cpp  intrinsics.yml
(+45 files in other folders)
